--- a/soal-2-frontend/package.json
+++ b/soal-2-frontend/package.json
@@ -15,6 +15,7 @@
     "@heroicons/vue": "^2.2.0",
     "axios": "^1.9.0",
     "pinia": "^3.0.1",
+    "sweetalert2": "^11.21.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1",
     "vuex": "^4.1.0"
